added missing endpoint, updated testcases, added logger and aop